Fix dog and guy clipping into menu on mobile

--- a/src/components/layouts/horizontal-layout/navigation/navigation.module.scss
+++ b/src/components/layouts/horizontal-layout/navigation/navigation.module.scss
@@ -60,7 +60,6 @@ $nav-width: 348px;
     top: calc(100% - 64px);
     flex-direction: row;
     transition: transform 0.15s linear;
-    overflow: hidden;
 
     &.open {
       transform: translateY(calc(-100% + 64px));
